<resources>
    <string name="app_name">masakan daerah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Masakkan" formatted="false">
    "Makanan Dari Luar Negri Memang Enak" \n
    TAPI… \n
    "Makanan Indonesia Tak Akan Kalah Enaknya"
        </string>
    <string name="timpan">
        Bahan Membuat Kue Timpan : \n\n

Tepung ketan 200 gr \n
Pisang raja dihaluskan 250 gram \n
Santan kental 2 sdm \n
Garam1/4 sdt \n
Air kapur sirih 1 sdm \n\n

Bahan Isi: \n
Nangka masak cincang kecil 25 gr \n
Telur ayam 2 butir \n
Santan kental 50 ml \n
Gula pasir 100 gr \n
Kelapa muda parut halus 50 gr \n
Tepung terigu ½ sdt \n
Daun pandan 1 lembar \n
Vanilli ¼ sdt. \n

        Langkah pertama \n\n
 Membuat adonan kulit : \n\
- Campurkan semua bahan dasar dengan cara aduk tepung ketan beserta pisang yang telah dihaluskan serta jangan lupa masukkan santan beserta air kapur dan garam sampai tercampur dengan rata. Setelah itu anda sisihkan sementara \n\n
Selanjutnya, Membuat isi : \n
- Kocok telur dan gula sampai kental dengar mixer atau sejenisnya (pada umumnya ibu ibu di Aceh meremasnya dengan menggunakan tangan jika tidak mempunyai mixer) lalu masukkan tepung terigu beserta santan kental. Kemudian aduk sampai rata dan tambahkan nangka masak (yang sebelumnya sudah dicincang kecil-kecil) dan kelapa muda parut halus lalu anda beri daun pandan. Kemudian masak hingga kental, setelah itu angkat dan beri vanilli lalu anda aduk rata lagi. Setelah matang, kemudian dinginkan dan gunakan nantinya sebagai isi kue timpan. \n
- Terakhir, ambil daun pisang muda yang sebelumnya telah dipotong–potong sesuai dengan satu ukuran kue timpan. Lalu olesi dengan menggunakan minyak, kemudian tipiskan adonan kulit tadi di atas daun. Setelah itu beri adonan isi lalu digulung dan dibungkus, setelah itu kukus sampai matang selama sekitar kurang lebih kurang 10 menit. Kemudian setelah matan, kue timpan buatan anda siap untuk disajikan. \n
    </string>
    <string name="bikaambon">
        Bahan \n\n
50 gr tepung terigu halus \n
½ sdt ragi siap saji \n
100 gr tepung sagu (ayak terlebihdahulu) \n
10 butir telur ayam, (pisahkan hanya kuningnya saja) \n
2 butir telur ayam (hanya putihnya saja) \n
200 ml santan kelapa kental \n
200 gr gula pasir halus \n
2 lembar daun pandan (rebus terlebihdahulu) \n
2 lembar daun jeruk \n
50 ml air putih \n
Minyak goreng secukupnya \n\n
Cara Membuat Bika Ambon Lembut Khas Medan \n\n
- Siapkan wadah untuk membuat adonan, lalu masukan tepung terigu dan ragi instan, kemudian tuangkan air, aduk hingga merata, dan biarkan mengembang kurang lebih 15 menit \n
- Campurkan kuning telur, putih telur, dan gula pasir halus kedalam adonan, aduk hingga semua adonan tercampur dan kental. Lalu masukan lagi tepung sagu yang telah disiapkan dan santan kelapa kental secara perlahan sambil di aduk, lakukan sampai adonan tercampur semua dan kalis \n
- Selanjutnya masukan daun jeruk dan pandan kedalam adonan, lalu aduk hingga tercampur, setelah itu tutup bagian atas adonan dengan bahan yang halus, kemudian diamkan kurang lebih 10 jam, hingga adonan mengembang \n
- Siapkan loyang yang sudah diolesi minyak, kemudian tuangkan adonan bika yang sudah jadi, pangganglah adonan dengan tutup sedikit terbuka agar ada uap sedikit, tunggu sampai adonan matang dengan berubah warna agak kuning kecoklatan, angkat dan diamkan \n
- Sajikan dalam wadah atau piring saji yang disiapkan, potong-potonglah agar kue gampang dimakan \n
    </string>
    <string name="kuebasung">
        Bahan-bahan dan bumbu-bumbu dalam resep Kue Basung: \n\n
250 gram tepung beras, sangrai \n
200 gram gula merah \n
550 ml air \n
300 ml santan dari 1/4 butir kelapa \n
1/4 sendok teh garam \n
daun pisang untuk membungkus \n\n

        Langkah \n\n
- Masak gula merah dan air sambil diaduk sampai larut. Saring. \n
- Ambil 2/3 bagian tepung beras, 1/2 sendok teh garam, dan rebusan gula merah. Aduk rata. \n
- Buat kerucut-kerucut kecil dari daun pisang. Masukkan adonan ke dalamnya. Kukus 15 menit sampai matang.\n
- Campur santan, sisa tepung beras, dan garam. Masukkan ke dalam kerucut yang telah berisi adonan matang. \n
- Kukus lagi 10 menit sampai matang. \n
    </string>
    <string name="kuelumpur">
        Bahan-bahan	\n\n
100 gram margarin yg dicairkan \n
175 ml santan instan \n
4 butir telur \n
125 gram tepung custard (yepung terigu segitiga biru juga boleh)\n
100 gram gula pasir \n
3 sdt garam \n
1 sdt soda kue \n
secukupnya keju parut \n\n

  Langkah \n\n
- Campurkan margarin cair bersama santan, gula pasir, garam dan soda kue aduk rata. \n
- Stelah itu masukkan tepung custard secara perlahan. \n
- Stelah adonan tepung tercampur menjadi satu masukkan telur satu per satu lalu aduk. \n
- Masukan keju parut ke dalam adonan. \n
- Masukkan kedalam panci cetakan tahu bulat \n
    </string>
<string name="kuepais">
    Bahan : \n\n
200 gr tepung beras \n
500 ml santan kelapa \n
200 gr gula pasir \n
1/4 sendok teh vanili bubuk \n
1/2 sendok teh garam halus \n
3 lembar daun pandan ( dicuci bersih ) \n
pisang kepok secukupnya ( potong-potong ) \n
daun pisang untuk membungkus secukupnya \n\n

 Cara Membuat Kue Nagasari : \n\n

- Campurkan santan kelapa, garam, vanili bubuk, gula pasir dan daun pandan \n
- Rebus diatas api sedang sampai mendidih sambil diaduk-aduk \n
- Matikan api lalu angkat rebusan santan \n
- Masukkan tepung beras dalam wadah lalu tuang rebusan santan panas kedalam wadah yang diisi tepung beras \n
- Aduk sampai tercampur rata dan menjadi adonan yang pas \n
- Ambil setiap satu sendok makan adonan lalu simpan diatas daun pisang dan beri potongan pisang pada bagian tengahnya kemudian dibungkus( lakukan sampai selesai ) \n
- Kukus adonan yang sudah dibungkus sampai benar-benar matang, angkat dinginkan \n
- Kue nagasari siap untuk disajikan \n
</string>
    <string name="lapislegit">
        Bahan-Bahan Lapis: \n\n
        1/4 kaleng susu kental \n
1/2 sendok teh vanili \n
1 sdm spekkoek atau bumbu untuk membuat kue lapis legit \n
300 gram mentega \n
200 gram margarin \n
350 gram gula halus \n
30 kuning telur \n

 Cara membuat Lapis legit original, resep \n\n
- Langkah yang pertama yaitu siapkan tepung terigu dan spekkoek. Kedua bahan ini dicampurkan lalu diaduk rata dan sisihkan. Setelah itu, siapkan loyang dengan ukuran sedang, 22 x 22 cm, yang sudah dilapisi dengan kertas minyak dan juga sudah diolesi dengan mentega serta tepung. Sisihkan loyang ini agar tidak kotor. \n
- Langkah selanjutnya dalam membuat resep lapis legit, setelah menyiapkan tepung dan loyang, siapkan mixer lalu kocok mentega dan margarin menjadi satu hingga tercampur rata lalu tambahkan susu dan aduk kembali. Setelah margarin, mentega, dan susu tercampur merata sisihkan.
    </string>
    <string name="kuelapekbinti">
        Bahan Isi : \n\n
100 gram daging sapi giling. \n
100 ml santan dari 1/4 butir kelapa. \n
1 cm lengkuas, dimemarkan. \n
1 lembar daun salam. \n\n

Bahan yang dihaluskan : \n\n
4 butir bawang merah. \n
2 siung bawang putih. \n
1 sendok teh ketumbar. \n
1/4 sendok teh garam.\n
1/4 sendok teh gula pasir.\n\n

Bahan untuk kulit : \n\n
200 gram tepung ketan. \n
1/2 sendok teh garam.\n
260 ml santan dari 1/2 butir kelapa, daun pisang Dihangatkan untuk membungkus. \n\n

Cara Membuatnya : \n\n
- Untuk Bahan lsi: caranya aduk rata bahan isi dengan bahan yang telah dihalus. Lalu masak sampai matang dan kering.\n
- Untuk Kulit : Campurkan tepung ketan, garam, dan santan hangat sedikit-sedikit sambil diuleni sampai licin. \n
- Ambil adonan kulit.lalu Pipihkan. isikan dengan bahan isi. Bentuk bulat. Bungkus dengan daun pisang dengan bentuk kotak \n
- Kukus -/+ 20 menit sampai matang. \n
    </string>
    <string name="tehtarik">
        Bahan-bahan	\n\n
2 porsi \n
3 bungkus max tea \n
3 sdt gula (kalau tidak terlalu suka manis) \n
700 ml air es \n
2 buah gelas yang jumbo \n
100 ml air anget \n\n

Langkah \n\n
- Masukan max tea ke dalam gelas dan beri air anget lalu kocok setelah tercampur beri air dingin \n
- Setelah seperti ini tuang bulak balik ke gelas yang besar tadi karena saya cuma punya satu gelas besar maka saya pakai takaran air untuk menarik teh \n
- tarik terus secara bergantian hingga 15x \n
    </string>
    <string name="bajigur">
        Bahan-bahan	\n\n
1 liter santan kekentalan sedang \n
200 gr gula merah, sisir \n
2 lbr daun pandan \n
1 sdm kopi instan \n
1/4 sdt garam \n
100 gr jahe bakar, geprek \n
50 gr jahe bakar, parut \n
1 btg kayu manis \n\n

        Langkah	\n\n
- Masak santan, gula merah, daun pandan, garam, jahe parut, dan jahe yg digeprek, aduk terus jgn sampai airnya bergejolak. \n
- Masukan 1 sdm kopi, dan kayu manis, aduk terus, angkat, dan hidangkan. \n
    </string>
    <string name="esdawet">
        Bahan-bahan \n\n
Bahan Cendol : \n
600 ml air \n\n
Bahan Santan : \n
secukupnya air  \n
1 butir kelapa parut \n
sejumput garam \n\n
Bahan Gula : \n
250 gr gula jawa \n
gula pasir \n
air \n
daun pandan \n\n

        Langkah \n\n
- tepung cendol instant nya..kisaran hrg 8500-10rb/pack. ada rasa vanilla, pandan dll \n
- Cendol : aduk rata air dan tepung cendol, masak hingga adonan tercampur rata dan matang. tekstur agk lengket. \n
- Siapkan wadah yg sdh berisi air. cetak cendol dan taruh wadah berisi air tsb di bawahnya. sisihkan. \n
- Santan : peras santan dengan sedikit air kemudian didihkan dan tambahkan sedikit garam. \n
- Gula : masak gula merah dgn gula pasir dan air. sisihkan. \n
- Penyajian : campur cendol, gula, santan dan es batu. \n
    </string>
    <string name="estambring">
        Bahan-bahan yang di butuhkan adalah : \n\n
400 gram gula pasir \n
75 gram asam jawa \n
750 ml air \n
1 butir telur ayam kampung, ambil putih telurnya saja \n
Air kelapa secukupnya \n
Kelapa muda, keruk dagingnya \n
Es batu, secukupnya \n\n
Cara membuat es tambring ini adalah sebagai berikut : \n
- Membuat sirup : Rebus dalam satu wadah gula pasir,asam jawa, dan air hingga mendidih. Selanjutnya, masukkan putih telur sambil diaduk-aduk hingga menggumpal dan dinginkan. Setelah itu saring. \n
- Siapkan gelas saji, masukan sirup, tambahkan air kelapa, dan daging kelapa muda \n
- Tambahkan es batu \n
- Sajikan dingin, Es Tambring khas Bali siap diminum. \n
    </string>
    <string name="pisanghijau">
        Bahan-bahan \n\n
5 buah pisang raja \n\n
Bahan kulit: \n
75 gram tepung terigu \n
75 gram tepung beras \n
1 sdm gula pasir \n
200-250 ml santan sedang \n
sejumput garam \n
secukupnya pasta pandan \n\n
Bahan bubur: \n
100 gram tepung beras \n
300 ml santan \n
3 sdm gula pasir \n
sejumput garam \n
1 lembar daun pandan \n\n
Pelengkap: \n
secukupnya es batu, sirup cocopandan, SKM \n\n
Langkah	\n\n
- Kukus pisang sekitar 5 menitan. Angkat dan sisihkan. \n
- Campur semua bahan kulit. Campur rata jangan sampai bergerindil. Kukus 15-20 menitan. Angkat lalu aduk sampai kalis, dinginkan. Bagi adonan menjadi 5 bagian. \n
- Siapkan daun pisang dan beri sedikit minyak. Pipihkan adonan, isi pisang, gulung memanjang. Lakukan sampai semua selesai. Kemudian kukus lagi 15 menit. \n
- Bubur: masak semua bahan sambil diaduk. Masak sampai mengental dan meletup-letup. \n
- Sajikan pisang ijo dengan bubur, dan bahan pelengkap. \n
    </string>
    <string name="airguraka">
        Bahan Air Guraka \n\n
500 gram Gula Aren \n
Air 2 liter \n
100 gram Jahe Merah \n
100 gram biji Kenari (almond) \n\n

Cara membuat Air Guraka \n\n
- kupas jahe merah kemudian bakar lalu memarkan. \n
- Rebus Jahe merah yang telah dimemarkan beserta gula merah sampai mendidih. Saring airnya. \n
- Siapkan gelas saji lalu masukkan air rebusan tadi dan tambahkan satu sendok teh kenari atau almond. \n
- sajikani Air Guraka ketika masih panas. \n
    </string>
</resources>