<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Aneka Minuman Nusantara"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/tehtarik"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teh Tarik Dari Aceh"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/tehtarik"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/bajigur" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bajigur Dari Jawa Barat"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/bajigur"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/minumanjawatengah" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Es Dawet Cendol Dari Jawa Tengah"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/esdawet"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/estambring" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Es Tambring Dari Bali"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/estambring"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/pisanghijau" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Es Pisang Hijau Dari Makasar"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/pisanghijau"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/airguraka" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Air Guraka Dari Ternate"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/airguraka"/>


    </LinearLayout>

</ScrollView>